<resources>
    <string name="app_name">Blissful</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_profile">Profile</string>
    <string name="login_activity_name">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="register_activity_name">Register Activity</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="blissful">Blissful</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="post_count">Posts: %1$d</string>
    <string name="settings">Settings</string>
    <string name="daily_notification">Do you want daily notification?</string>
    <string name="back">Back</string>
    <string name="sign_in_with_google">Sign in with Google</string>
</resources>